# iTracker

./: CMakeCache.txt  Makefile  PupilTracker.cpp  PupilTracker.h  README.md  canny_tracker  cmake_install.cmake  pupil_demo.cpp
pupil_tracker_standalone/: CMakeLists.txt  canny_main.cpp  main.cpp  swirski_main.cpp
pupil_tracker_standalone/canny_pupil/: PupilTracker.cpp  PupilTracker.h
pupil_tracker_standalone/lib/: PupilTracker.cpp  PupilTracker.h  cvx.cpp
pupil_tracker_standalone/vs2013/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pupil_tracker.vcxproj  pupil_tracker.vcxproj.filters  pupiltracker.sln  swirski_lib.vcxproj  swirski_lib.vcxproj.filters
pupil_tracker_standalone/vs2013/Release/: swirski_lib.lib
pupil_tracker_standalone/vs2013/pupil_tracker.dir/Release/pupil_tracker.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pupil_tracker_standalone/vs2013/swirski_lib.dir/Release/swirski_lib.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog  swirski_lib.lastbuildstate
pupil_tracker_standalone/vs2013/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
raspi_headset/src/pupil/: pupil_tracker.cpp
